--- a/assets/javascripts/discourse/templates/list/topic-list-item.raw.hbs
+++ b/assets/javascripts/discourse/templates/list/topic-list-item.raw.hbs
@@ -73,18 +73,20 @@
 <td class="num likes">
   {{#if hasLikes}}
     <a href='{{topic.summaryUrl}}'>
-      {{number topic.like_count}} <i class='fa fa-heart'></i></td>
+      {{number topic.like_count}} <i class='fa fa-heart'></i>
     </a>
   {{/if}}
+</td>
 {{/if}}
 
 {{#if showOpLikes}}
 <td class="num likes">
   {{#if hasOpLikes}}
     <a href='{{topic.summaryUrl}}'>
-      {{number topic.op_like_count}} <i class='fa fa-heart'></i></td>
+      {{number topic.op_like_count}} <i class='fa fa-heart'></i>
     </a>
   {{/if}}
+</td>
 {{/if}}
 
 <td class="num views {{topic.viewsHeat}}">{{number topic.views numberKey="views_long"}}</td>
